# self-interferometry

./: .gitignore  .pre-commit-config.yaml  README.md  acquire.py  acquire_automatic.py  acquire_automatic2.py  acquire_continuous.py  acquire_multiple.py  blink.py  calibration.ipynb  calibration_polished.ipynb  calibration_rp.ipynb  decoder.py  interferometers.py  main.py  model_analysis.py  models.py  plot_2dhists.py  plot_predictions.py  plot_quartiles.py  pyproject.toml  requirements.txt  setup.py  train.py  util.py
.github/workflows/: pytest.yml
calib_data/: CalibrationData2024.h5
notebooks/: calibration_2025.ipynb  calibration_2025.py  calibration_polished.ipynb  calibration_rp.ipynb  causal_inductive_bias_test.ipynb  cavity_reflectance.py  circuit_diagram.py  eda_bnn.ipynb  fisher_info.py  model_architecture.py  predictions.py
plots/: plot_2dhists.py  plot_predictions.py  plot_quartiles.py
redpitaya/: coil_driver.py  manager.py  plot_waveforms.py  scpi.py  waveform.py
rp_control/: acquire_automatic.py  rp_manager.py
self_interferometry/: main.py  run_training.bat
self_interferometry/acquisition/: __init__.py
self_interferometry/acquisition/redpitaya/: __init__.py  manager.py  scpi.py
self_interferometry/acquisition/simulations/: __init__.py  calib_params.py  coil_driver.py  interferometers.py  waveform.py
self_interferometry/analysis/: barland_cnn.py  datasets.py  fno.py  generate_data.py  inspect_data.py  lightning_ensemble.py  lightning_fusion.py  lightning_standard.py  lit_module.py  models_tcn.py  stemtcan.py  synthetic_lit_module.py  tcn.py  training.py  training_interface.py  uno.py  utcn.py
self_interferometry/analysis/configs/: barland-config.yaml  fno-config.yaml  stemtcan-config.yaml  tcn-config.yaml  uno-config.yaml  utcn-config.yaml
self_interferometry/analysis/models/: __init__.py  barland_cnn.py  chomp1d.py  cross_attention_block.py  factory.py  fno.py  horizontal_skip.py  lstm.py  mamba.py  scnn.py  stemtcan.py  tcan.py  tcn.py  temporal_block.py  transpose.py  utcn.py  vicreg.py
self_interferometry/analysis/models/configs/: barland-config.yaml  fno-config.yaml  lstm-config.yaml  mamba-config.yaml  scnn-config.yaml  stemtcan-config.yaml  synthetic-tcn-config.yaml  tcan-config.yaml  tcn-config.yaml  uno-config.yaml  utcn-config.yaml
self_interferometry/analysis/models/results/: plot_pareto.py
self_interferometry/redpitaya/: coil_driver.py  manager.py  redpitaya_config.py  scpi.py  waveform.py
self_interferometry/signal_analysis/: datasets.py  generate_data.py  inspect_data.py  interferometers.py  lightning_config.py  lightning_ensemble.py  lightning_standard.py  lightning_student.py  lightning_teacher.py  models.py  models_cnn.py  models_fcn.py  models_tcn.py  training.py
self_interferometry/signal_analysis/configs/: barland-config.yaml  cnn-tcn-config.yaml  tcn-config.yaml
signal_analysis/: datasets.py  generate_data.py  interferometers.py  lightning_config.py  models.py  training.py  util.py
signal_analysis/configs/: cnn-tcn-config.yaml  model_config.yaml  nanogpt_config.yaml
tests/: plot_waveforms.py  test_coil_driver_calibration.py  test_interferometer_simulation.py  test_model_causality.py  test_model_forward.py  test_waveform_sample.py
